--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         var max = 100;
         var defaultValue = 50;
         var interval = 0.5; // Min Value 0.3 (milliseconds)
-        var tuneOutVal = 55;
+        var tuneOutVal = 999;
+        var tuneOutDescription = "";
     </script>
   </head>
   <body>
@@ -73,9 +74,11 @@
 
             <div class="tuneout-cont">
                 <div class="tuneout-button">
+                    <!-- <input type="checkbox" name="tuneout"> -->
                     <div class="tuneout-icon"><img src="./images/Icon awesome-power-off.png"></div>
                     <div class="tuneout-text">TUNE OUT</div>
                 </div>
+                <div class="tuneout-tooltip">Tune Out Placeholder Description</div>
             </div>
 
             <div class="review-cont">
